# Image-Retargeting

./: .clang-format  .gitattribute  .gitignore  CMakeLists.txt  Makefile  README.md  try_seg-param.sh
docker/: docker_build.sh  docker_run.sh  dockerfile
src/: args.h  main.cpp  resize.cpp  retargeting.cpp
src/geometry/: common.h  quad_edge.h  quad_facet.h  quad_mesh.h  quad_vertex.h
src/image/: colorspace_op.h  compute_saliency.cpp  compute_saliency.cu  compute_saliency.h  filter.h  homography.h  image.h  imageIO.h  pad_op.h  padding_op.h  perspective_transform_op.h  pool.h  resizing_op.h  saliency.h  saliency_utils.cpp  saliency_utils.h  segmentation.h  utils.h  wrapping.h
src/numerical/: cg_solver.h  linesearch.h  problem.h  solver.h  types.h
test/: CMakeLists.txt  main.cpp  test_geometry.cpp  test_image.cpp  test_padding.cpp  test_resizing.cpp  test_saliency_utils.cpp  test_solver.cpp
